--- a/admin.html
+++ b/admin.html
@@ -612,7 +612,7 @@
                         Lokasi Proyek
                     </th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase">
-                        Peran di Proyek
+                        jabatan
                     </th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase">
                         Durasi
@@ -715,7 +715,7 @@
 
                     <td class="px-3 py-2 sm:px-6 sm:py-4 whitespace-normal md:whitespace-nowrap">
                         <span class="bg-slate-100 text-slate-600 text-xs px-2 py-1 rounded-full border border-slate-200 font-medium">
-                            Tukang Bantu
+                            Tukang
                         </span>
                     </td>
 
@@ -1377,10 +1377,6 @@
                         </select>
                     </div>
 
-                    <div>
-                        <label class="block text-sm font-medium text-slate-700 mb-1">Posisi/Peran di Proyek Ini</label>
-                        <input type="text" class="w-full px-3 py-2 border border-slate-300 rounded-lg focus:ring-arbi-500 focus:border-arbi-500" placeholder="Contoh: Mandor Lapangan / Tukang Kayu">
-                    </div>
 
                     <div class="grid grid-cols-2 gap-4">
                         <div>
@@ -1769,4 +1765,5 @@
     }
     </script>
 </body>
+
 </html>
